Tabla-Perfumes-Version35

--- a/Index.html
+++ b/Index.html
@@ -128,7 +128,7 @@
         <div class="Tabs-1">
           <table class="Tabla-Perfumes" id="Tabla-Hombres">
             <tr class="Seccion-Perfumes" id="Perfumes-Hombres">
-              <td class="Producto" id="Producto_1">
+              <td class="Producto" id="Producto_1" width="100%">
                 <h1 class="Titulo" id="Titulo_1">STRONGER WITH YOU DE GIORGIO ARMANI</h1>
                 <img class="Img-Producto" id="Img-Producto_1" src="img/Catalogo-1.png">
                 <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
@@ -137,39 +137,158 @@
                   modernidad. Es impredecible y original, al igual que el acorde picante de la fragancia:
                   una mezcla de cardamomo, pimienta rosa y hojas de violeta.
                 </p>
+                <button class="Compra" id="Compra_1">
+                  <h3 class="Content-Compra" id="Conten-Compra_1"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $310 USD</i></h3>
+              </button>
               </td>
               <td class="Producto" id="Producto_2">
-                <h1 class="Titulo" id="Titulo_2">STRONGER WITH YOU DE GIORGIO ARMANI</h1>
-                <img class="Img-Producto" id="Img-Producto_2" src="img/Catalogo-1.png">
+                <h1 class="Titulo" id="Titulo_2">PERFUME LOCIÓN ACQUA DI GIO</h1>
+                <img class="Img-Producto" id="Img-Producto_2" src="img/Catalogo-2.png">
                 <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
                 <p class="Descripcion" id="Descripcion_2">
                   Stronger with you se inspira en un hombre que vive en el presente, moldeado por la energía de la
                   modernidad. Es impredecible y original, al igual que el acorde picante de la fragancia:
                   una mezcla de cardamomo, pimienta rosa y hojas de violeta.
                 </p>
+                <button class="Compra" id="Compra_1">
+                  <h3 class="Content-Compra" id="Conten-Compra_1"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $450 USD</i></h3>
+              </button>
               </td>
               <td class="Producto" id="Producto_3">
-                <h1 class="Titulo" id="Titulo_3">STRONGER WITH YOU DE GIORGIO ARMANI</h1>
-                <img class="Img-Producto" id="Img-Producto_3" src="img/Catalogo-1.png">
+                <h1 class="Titulo" id="Titulo_3">PERFUME LOCIÓN ACQUA DI GIO</h1>
+                <img class="Img-Producto" id="Img-Producto_3" src="img/Catalogo-3.png">
                 <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
                 <p class="Descripcion" id="Descripcion_3">
-                  Stronger with you se inspira en un hombre que vive en el presente, moldeado por la energía de la
-                  modernidad. Es impredecible y original, al igual que el acorde picante de la fragancia:
-                  una mezcla de cardamomo, pimienta rosa y hojas de violeta.
+                  ACQUA DI GIÒ PROFONDO de Giorgio Armani es un Eau de Parfum masculino perteneciente a la familia olfativa Aromática Acuática.
+                   Se trata de la interpretación contemporánea e intensa de Acqua di Giò, que busca remontarse a los orígenes: el mar.
                 </p>
+                <button class="Compra" id="Compra_1">
+                  <h3 class="Content-Compra" id="Conten-Compra_1"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $180 USD</i></h3>
+              </button>
               </td>
             </tr>
-            <tr class="Perfumes-Hombres">
-              <td class="Perfumes" id="Perfumes_4">
+            <tr class="Seccion-Perfumes" id="Perfumes-Hombres">
+              <td class="Producto" id="Producto_4">
+                <h1 class="Titulo" id="Titulo_3">DOLCE & GABBANA- THE ONE FOR MEN</h1>
+                <img class="Img-Producto" id="Img-Producto_3" src="img/Catalogo-4.png">
+                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ </h1>
+                <p class="Descripcion" id="Descripcion_3">
+                  Dolce & Gabbana ha sorprendido al mundo en no pocas ocasiones, con aromas rompedores, novedosos y extremadamente gustables.
+                   De ello The One for Men es un caso paradigmático, cumple con 2 de los requisitos importantes para encontrar una buena fragancia
+                </p>
+                <button class="Compra" id="Compra_1">
+                  <h3 class="Content-Compra" id="Conten-Compra_1"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $150 USD</i></h3>
+              </button>
               </td>
-              <td class="Perfumes" id="Perfumes_5"> </td>
-              <td class="Perfumes" id="Perfumes_6"> </td>
+              <td class="Producto" id="Producto_5"> 
+                <h1 class="Titulo" id="Titulo_3">DOLCE & GABBANA POUR HOMEE HOMBRE PH053</h1>
+                <img class="Img-Producto" id="Img-Producto_3" src="img/Catalogo-5.png">
+                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <p class="Descripcion" id="Descripcion_3">
+                  Lanzado en 1994, Dolce y Gabbana Pour Homme es un signo de masculinidad, personalidad, y distinción. Tan único como la imagen de Dolce y Gabbana,
+                   Pour Homme es una mezcla de ironía, verdad e informalidad. La frescura dinámica que expresa su personalidad a través de olores cítricos con un poco de flores frescas y maderas.
+                </p>
+                <button class="Compra" id="Compra_1">
+                  <h3 class="Content-Compra" id="Conten-Compra_1"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $350 USD</i></h3>
+              </button>
+              </td>
+              <td class="Producto" id="Producto_6"> 
+                <h1 class="Titulo" id="Titulo_3">SKY DE GIOIA DE GIORGIO ARMANI</h1>
+                <img class="Img-Producto" id="Img-Producto_3" src="img/Catalogo-6.png">
+                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <p class="Descripcion" id="Descripcion_3">
+                  Un comienzo fresco ligeramente verde y especiado. Un corazón aromático dominado por la esencia de lavanda de Provenza, 
+                  con carices verdes, especiados y almendrados. Una estela ambarina, almizclado amaderado en torno al pachuli de Indonesia. Perfumistas: Maurice Roucel, Symrise.
+                </p>
+                <button class="Compra" id="Compra_1">
+                  <h3 class="Content-Compra" id="Conten-Compra_1"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $250 USD</i></h3>
+              </button>
+              </td>
             </tr>
           </table>
         </div>
         <input type="radio" name="radio" id="Login" checked>
         <div class="Tabs-2">
-          <h1>tabla_2</h1>
+          <table class="Tabla-Perfumes" id="Tabla-Hombres">
+            <tr class="Seccion-Perfumes" id="Perfumes-Hombres">
+              <td class="Producto" id="Producto_7" width="100%">
+                <h1 class="Titulo" id="Titulo_7">STRONGER WITH YOU DE GIORGIO ARMANI</h1>
+                <img class="Img-Producto" id="Img-Producto_7" src="img/Catalogo-7.png">
+                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <p class="Descripcion" id="Descripcion_7">
+                  Stronger with you se inspira en un hombre que vive en el presente, moldeado por la energía de la
+                  modernidad. Es impredecible y original, al igual que el acorde picante de la fragancia:
+                  una mezcla de cardamomo, pimienta rosa y hojas de violeta.
+                </p>
+                <button class="Compra" id="Compra_7">
+                  <h3 class="Content-Compra" id="Conten-Compra_7"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $310 USD</i></h3>
+              </button>
+              </td>
+              <td class="Producto" id="Producto_8">
+                <h1 class="Titulo" id="Titulo_8">PERFUME LOCIÓN ACQUA DI GIO</h1>
+                <img class="Img-Producto" id="Img-Producto_8" src="img/Catalogo-8.png">
+                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <p class="Descripcion" id="Descripcion_8">
+                  Stronger with you se inspira en un hombre que vive en el presente, moldeado por la energía de la
+                  modernidad. Es impredecible y original, al igual que el acorde picante de la fragancia:
+                  una mezcla de cardamomo, pimienta rosa y hojas de violeta.
+                </p>
+                <button class="Compra" id="Compra_8">
+                  <h3 class="Content-Compra" id="Conten-Compra_8"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $450 USD</i></h3>
+              </button>
+              </td>
+              <td class="Producto" id="Producto_9">
+                <h1 class="Titulo" id="Titulo_9">PERFUME LOCIÓN ACQUA DI GIO</h1>
+                <img class="Img-Producto" id="Img-Producto_9" src="img/Catalogo-9.png">
+                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <p class="Descripcion" id="Descripcion_9">
+                  ACQUA DI GIÒ PROFONDO de Giorgio Armani es un Eau de Parfum masculino perteneciente a la familia olfativa Aromática Acuática.
+                   Se trata de la interpretación contemporánea e intensa de Acqua di Giò, que busca remontarse a los orígenes: el mar.
+                </p>
+                <button class="Compra" id="Compra_10">
+                  <h3 class="Content-Compra" id="Conten-Compra_10"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $180 USD</i></h3>
+              </button>
+              </td>
+            </tr>
+            <tr class="Seccion-Perfumes" id="Perfumes-Hombres">
+              <td class="Producto" id="Producto_10">
+                <h1 class="Titulo" id="Titulo_10">DOLCE & GABBANA- THE ONE FOR MEN</h1>
+                <img class="Img-Producto" id="Img-Producto_10" src="img/Catalogo-10.png">
+                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ </h1>
+                <p class="Descripcion" id="Descripcion_10">
+                  Dolce & Gabbana ha sorprendido al mundo en no pocas ocasiones, con aromas rompedores, novedosos y extremadamente gustables.
+                   De ello The One for Men es un caso paradigmático, cumple con 2 de los requisitos importantes para encontrar una buena fragancia
+                </p>
+                <button class="Compra" id="Compra_10">
+                  <h3 class="Content-Compra" id="Conten-Compra_10"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $150 USD</i></h3>
+              </button>
+              </td>
+              <td class="Producto" id="Producto_11"> 
+                <h1 class="Titulo" id="Titulo_11">DOLCE & GABBANA POUR HOMEE HOMBRE PH053</h1>
+                <img class="Img-Producto" id="Img-Producto_11" src="img/Catalogo-11.png">
+                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <p class="Descripcion" id="Descripcion_11">
+                  Lanzado en 1994, Dolce y Gabbana Pour Homme es un signo de masculinidad, personalidad, y distinción. Tan único como la imagen de Dolce y Gabbana,
+                   Pour Homme es una mezcla de ironía, verdad e informalidad. La frescura dinámica que expresa su personalidad a través de olores cítricos con un poco de flores frescas y maderas.
+                </p>
+                <button class="Compra" id="Compra_11">
+                  <h3 class="Content-Compra" id="Conten-Compra_11"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $350 USD</i></h3>
+              </button>
+              </td>
+              <td class="Producto" id="Producto_12"> 
+                <h1 class="Titulo" id="Titulo_12">SKY DE GIOIA DE GIORGIO ARMANI</h1>
+                <img class="Img-Producto" id="Img-Producto_12" src="img/Catalogo-12.png">
+                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <p class="Descripcion" id="Descripcion_12">
+                  Un comienzo fresco ligeramente verde y especiado. Un corazón aromático dominado por la esencia de lavanda de Provenza, 
+                  con carices verdes, especiados y almendrados. Una estela ambarina, almizclado amaderado en torno al pachuli de Indonesia. Perfumistas: Maurice Roucel, Symrise.
+                </p>
+                <button class="Compra" id="Compra_12">
+                  <h3 class="Content-Compra" id="Conten-Compra_12"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $250 USD</i></h3>
+              </button>
+              </td>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
