Tabla_Perfumes-Version38

--- a/Index.html
+++ b/Index.html
@@ -209,41 +209,39 @@
         </div>
         <input type="radio" name="radio" id="Login" checked>
         <div class="Tabs-2">
-          <table class="Tabla-Perfumes" id="Tabla-Hombres">
-            <tr class="Seccion-Perfumes" id="Perfumes-Hombres">
+          <table class="Tabla-Perfumes" id="Tabla-Damas">
+            <tr class="Seccion-Perfumes" id="Perfumes-Damas">
               <td class="Producto" id="Producto_7" width="100%">
-                <h1 class="Titulo" id="Titulo_7">STRONGER WITH YOU DE GIORGIO ARMANI</h1>
+                <h1 class="Titulo" id="Titulo_7">PERFUME MUJER DOLCE EDP 75 ML DOLCE & GABBANA 75 ML</h1>
                 <img class="Img-Producto" id="Img-Producto_7" src="img/Catalogo-7.png">
                 <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
                 <p class="Descripcion" id="Descripcion_7">
-                  Stronger with you se inspira en un hombre que vive en el presente, moldeado por la energía de la
-                  modernidad. Es impredecible y original, al igual que el acorde picante de la fragancia:
-                  una mezcla de cardamomo, pimienta rosa y hojas de violeta.
+                  Esta fragancia femenina está inspirada en la belleza legendariamente noble de Sicilia, con sus jardines colmados de frescas flores blancas. 
+                  Dolce es un Eau de Parfum atemporal que combina lo mejor del glamour clásico con la innovación contemporánea.
                 </p>
                 <button class="Compra" id="Compra_7">
                   <h3 class="Content-Compra" id="Conten-Compra_7"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $310 USD</i></h3>
               </button>
               </td>
               <td class="Producto" id="Producto_8">
-                <h1 class="Titulo" id="Titulo_8">PERFUME LOCIÓN ACQUA DI GIO</h1>
+                <h1 class="Titulo" id="Titulo_8">PERFUME PARA MUJER THE ONE 75ML DE DOLCE & GABBANA</h1>
                 <img class="Img-Producto" id="Img-Producto_8" src="img/Catalogo-8.png">
                 <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
                 <p class="Descripcion" id="Descripcion_8">
-                  Stronger with you se inspira en un hombre que vive en el presente, moldeado por la energía de la
-                  modernidad. Es impredecible y original, al igual que el acorde picante de la fragancia:
-                  una mezcla de cardamomo, pimienta rosa y hojas de violeta.
+                  75 M/L.(ONZ).THE ONE fue creado en el 2006. Como fue previsto por los diseñadores, es una fragancia para una mujer excepcional que inmediatamente llama la atención,
+                   no sólo con su aspecto, sino también con sus modales, postura y el mundo interior.
                 </p>
                 <button class="Compra" id="Compra_8">
                   <h3 class="Content-Compra" id="Conten-Compra_8"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $450 USD</i></h3>
               </button>
               </td>
               <td class="Producto" id="Producto_9">
-                <h1 class="Titulo" id="Titulo_9">PERFUME LOCIÓN ACQUA DI GIO</h1>
+                <h1 class="Titulo" id="Titulo_9">PERFUME LANCOME TRESOR PARA MUJER SIZE 100 ML</h1>
                 <img class="Img-Producto" id="Img-Producto_9" src="img/Catalogo-9.png">
                 <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
                 <p class="Descripcion" id="Descripcion_9">
-                  ACQUA DI GIÒ PROFONDO de Giorgio Armani es un Eau de Parfum masculino perteneciente a la familia olfativa Aromática Acuática.
-                   Se trata de la interpretación contemporánea e intensa de Acqua di Giò, que busca remontarse a los orígenes: el mar.
+                  Perfumes para mujeres Tresor Eau De Parfum Lumineuse De Lancome, su aroma es jovial, dulce sofisticado, 
+                  con unas arrolladoras notas acarameladas, dedicada a mujeres apasionadas, modernas, sofisticadas y alegres
                 </p>
                 <button class="Compra" id="Compra_10">
                   <h3 class="Content-Compra" id="Conten-Compra_10"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $180 USD</i></h3>
@@ -252,24 +250,24 @@
             </tr>
             <tr class="Seccion-Perfumes" id="Perfumes-Hombres">
               <td class="Producto" id="Producto_10">
-                <h1 class="Titulo" id="Titulo_10">DOLCE & GABBANA- THE ONE FOR MEN</h1>
+                <h1 class="Titulo" id="Titulo_10">TRÉSOR MIDNIGHT ROSE DE LANCÔMEN</h1>
                 <img class="Img-Producto" id="Img-Producto_10" src="img/Catalogo-10.png">
                 <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ </h1>
                 <p class="Descripcion" id="Descripcion_10">
-                  Dolce & Gabbana ha sorprendido al mundo en no pocas ocasiones, con aromas rompedores, novedosos y extremadamente gustables.
-                   De ello The One for Men es un caso paradigmático, cumple con 2 de los requisitos importantes para encontrar una buena fragancia
+                  Este maravilloso perfume que pertenece a la familia olfativa Almizcle-Floral-Amaderado.
+                   Su bella botella rosada, alargada y con un moño de rosa en el cuello, se destaca de sus predecesores de la línea trésor que suelen venir en un envase con forma de pirámide invertida.
                 </p>
                 <button class="Compra" id="Compra_10">
                   <h3 class="Content-Compra" id="Conten-Compra_10"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $150 USD</i></h3>
               </button>
               </td>
               <td class="Producto" id="Producto_11"> 
-                <h1 class="Titulo" id="Titulo_11">DOLCE & GABBANA POUR HOMEE HOMBRE PH053</h1>
+                <h1 class="Titulo" id="Titulo_11">PERFUME LA VIE EST BELLE</h1>
                 <img class="Img-Producto" id="Img-Producto_11" src="img/Catalogo-11.png">
                 <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
                 <p class="Descripcion" id="Descripcion_11">
-                  Lanzado en 1994, Dolce y Gabbana Pour Homme es un signo de masculinidad, personalidad, y distinción. Tan único como la imagen de Dolce y Gabbana,
-                   Pour Homme es una mezcla de ironía, verdad e informalidad. La frescura dinámica que expresa su personalidad a través de olores cítricos con un poco de flores frescas y maderas.
+                  La Vie Est Belle de Lancome es una fragancia de la familia olfativa Floral Frutal Gourmand para Mujeres. La Vie Est Belle se lanzó en 2012. 
+                  La Vie Est Belle fue creada por Olivier Polge, Dominique Ropion y Anne Flipo. Las Notas de Salida son grosellas negras y pera; las Notas de Corazón son iris, jazmín y flor de azahar del naranjo.
                 </p>
                 <button class="Compra" id="Compra_11">
                   <h3 class="Content-Compra" id="Conten-Compra_11"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $350 USD</i></h3>
@@ -280,8 +278,8 @@
                 <img class="Img-Producto" id="Img-Producto_12" src="img/Catalogo-12.png">
                 <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
                 <p class="Descripcion" id="Descripcion_12">
-                  Un comienzo fresco ligeramente verde y especiado. Un corazón aromático dominado por la esencia de lavanda de Provenza, 
-                  con carices verdes, especiados y almendrados. Una estela ambarina, almizclado amaderado en torno al pachuli de Indonesia. Perfumistas: Maurice Roucel, Symrise.
+                  Perfume The One Dolce Gabbana Hombre Eau De Parfum es una fragancia de la familia olfativa Amaderada Especiada para Hombres. 
+                  The One se lanzó en 2008. La Nariz detrás de esta fragrancia es Olivier Polge. Las Notas de Salida son cilantro, albahaca y toronja (pomelo); las Notas de Corazón son jengibre, flor de azahar del naranjo y cardamomo.
                 </p>
                 <button class="Compra" id="Compra_12">
                   <h3 class="Content-Compra" id="Conten-Compra_12"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $250 USD</i></h3>
