--- a/Index.html
+++ b/Index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>Responsive</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="img/Logo-Perfume.png">
-  <link href="css/1.css" rel="stylesheet">
-  <link href="css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital@1&display=swap" rel="stylesheet">
-</head>
-
+    <title>Perfumes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="img/Logo-Perfume.png">
+    <link href="css/1.css" rel="stylesheet">
+    <link href="css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet"
+  </head>
 <body class="Pagina_Principal">
   <div class="Div-Principal">
+    <br> <br> <br> <br>
     <header class="Cabecera">
       <nav class="Nav-Opciones">
+        <a href="Index.html"><h1 class="Logo-Perfumes">PERFUMERÍA</h1></a>
         <ul>
           <li><a href=""><i class="fas fa-user-cog"></i></a></li>
           <li><a href=""><i class="fas fa-cart-plus"></i></a></li>
@@ -25,7 +22,7 @@
         </ul>
       </nav>
     </header>
-    <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
+    <a href="Index.html"><img class="Img-Logo" src=""></a>
     <div class="Publicidad-1">
       <h1 class="font-effect-outline" id="Letra-Publicidad">
         “El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”
@@ -41,7 +38,7 @@
           <li>
             <input type="radio" id="boton-1" name="in">
             <label for="boton-1"></label>
-            <img src="img/Img-1.jpg" width="100%" id="foto01">
+            <img src="img/slide-2.jpg" width="100%" id="foto01">
           </li>
           <li>
             <input type="radio" id="boton-2" name="in">
