--- a/Index.html
+++ b/Index.html
@@ -64,7 +64,6 @@
       </ul>
     </div>
   </div>
-
   </div>
   <div class="Top-Favoritos">
     <table class="Perfumes-Favoritos">
@@ -75,32 +74,24 @@
         <td class="Perfumes" id="Perfume_2">
           <img src="img/Catalogo-1.png" alt=""><br>
           <h3>
-            ★ ★ ★ ★ ★
-            <br>
             GIORGIO ARMANI
           </h3>
         </td>
         <td class="Perfumes" id="Perfume_3">
           <img src="img/Catalogo-2.png" alt=""><br>
           <h3>
-            ★ ★ ★ ★ ★
-            <br>
             ACQUA DI GIO
           </h3>
         </td>
         <td class="Perfumes" id="Perfume_4">
           <img src="img/Catalogo-9.png" alt=""><br>
           <h3>
-            ★ ★ ★ ★
-            <br>
             LANCOME TRESOR
           </h3>
         </td>
         <td class="Perfumes" id="Perfume_5">
           <img src="img/Catalogo-10.png" alt=""><br>
           <h3>
-            ★ ★ ★ ★
-            <br>
             LANCOME TRESOR
           </h3>
         </td>
@@ -109,7 +100,7 @@
   </div>
   <br>
   <div class="Categoria">
-    <h1>NUESTROS PERFUMES</h1>
+    <h1 id="Indicacion-Mensaje">NUESTROS PERFUMES</h1>
     <div class="Formulario-P" id="Opciones-Productos">
       <div class="Tabs-Usuario" id="Secciones-Productos">
         <label for="Registrate" id="label-Productos">
@@ -127,35 +118,33 @@
               <td class="Producto" id="Producto_1" width="100%">
                 <h1 class="Titulo" id="Titulo_1">STRONGER WITH YOU DE GIORGIO ARMANI</h1>
                 <img class="Img-Producto" id="Img-Producto_1" src="img/Catalogo-1.png">
-                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <h1 class="Precio">$ 110 USD</h1>
                 <p class="Descripcion" id="Descripcion_1">
                   Stronger with you se inspira en un hombre que vive en el presente, moldeado por la energía de la
                   modernidad. Es impredecible y original, al igual que el acorde picante de la fragancia:
                   una mezcla de cardamomo, pimienta rosa y hojas de violeta.
                 </p>
                 <button class="Compra" id="Compra_1">
-                  <h3 class="Content-Compra" id="Conten-Compra_1"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $310
-                      USD</i></h3>
+                  <h3 class="Content-Compra" id="Conten-Compra_1">AÑADIR AL CARRITO</h3>
                 </button>
               </td>
               <td class="Producto" id="Producto_2">
                 <h1 class="Titulo" id="Titulo_2">PERFUME LOCIÓN ACQUA DI GIO</h1>
                 <img class="Img-Producto" id="Img-Producto_2" src="img/Catalogo-2.png">
-                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <h1 class="Precio">$ 410 USD</h1>
                 <p class="Descripcion" id="Descripcion_2">
                   Stronger with you se inspira en un hombre que vive en el presente, moldeado por la energía de la
                   modernidad. Es impredecible y original, al igual que el acorde picante de la fragancia:
                   una mezcla de cardamomo, pimienta rosa y hojas de violeta.
                 </p>
                 <button class="Compra" id="Compra_1">
-                  <h3 class="Content-Compra" id="Conten-Compra_1"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $450
-                      USD</i></h3>
+                  <h3 class="Content-Compra" id="Conten-Compra_1">AÑADIR AL CARRITO</h3>
                 </button>
               </td>
               <td class="Producto" id="Producto_3">
                 <h1 class="Titulo" id="Titulo_3">PERFUME LOCIÓN ACQUA DI GIO</h1>
                 <img class="Img-Producto" id="Img-Producto_3" src="img/Catalogo-3.png">
-                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <h1 class="Precio">$ 510 USD</h1>
                 <p class="Descripcion" id="Descripcion_3">
                   ACQUA DI GIÒ PROFONDO de Giorgio Armani es un Eau de Parfum masculino perteneciente a la familia
                   olfativa Aromática Acuática.
@@ -163,8 +152,7 @@
                   orígenes: el mar.
                 </p>
                 <button class="Compra" id="Compra_1">
-                  <h3 class="Content-Compra" id="Conten-Compra_1"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $180
-                      USD</i></h3>
+                  <h3 class="Content-Compra" id="Conten-Compra_1">AÑADIR AL CARRITO</h3>
                 </button>
               </td>
             </tr>
@@ -172,7 +160,7 @@
               <td class="Producto" id="Producto_4">
                 <h1 class="Titulo" id="Titulo_3">DOLCE & GABBANA- THE ONE FOR MEN</h1>
                 <img class="Img-Producto" id="Img-Producto_3" src="img/Catalogo-4.png">
-                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ </h1>
+                <h1 class="Precio">$ 210 USD</h1>
                 <p class="Descripcion" id="Descripcion_3">
                   Dolce & Gabbana ha sorprendido al mundo en no pocas ocasiones, con aromas rompedores, novedosos y
                   extremadamente gustables.
@@ -180,14 +168,13 @@
                   encontrar una buena fragancia
                 </p>
                 <button class="Compra" id="Compra_1">
-                  <h3 class="Content-Compra" id="Conten-Compra_1"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $150
-                      USD</i></h3>
+                  <h3 class="Content-Compra" id="Conten-Compra_1">AÑADIR AL CARRITO</h3>
                 </button>
               </td>
               <td class="Producto" id="Producto_5">
                 <h1 class="Titulo" id="Titulo_3">DOLCE & GABBANA POUR HOMEE HOMBRE PH053</h1>
                 <img class="Img-Producto" id="Img-Producto_3" src="img/Catalogo-5.png">
-                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <h1 class="Precio">$ 370 USD</h1>
                 <p class="Descripcion" id="Descripcion_3">
                   Lanzado en 1994, Dolce y Gabbana Pour Homme es un signo de masculinidad, personalidad, y distinción.
                   Tan único como la imagen de Dolce y Gabbana,
@@ -195,14 +182,13 @@
                   personalidad a través de olores cítricos con un poco de flores frescas y maderas.
                 </p>
                 <button class="Compra" id="Compra_1">
-                  <h3 class="Content-Compra" id="Conten-Compra_1"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $350
-                      USD</i></h3>
+                  <h3 class="Content-Compra" id="Conten-Compra_1">AÑADIR AL CARRITO</h3>
                 </button>
               </td>
               <td class="Producto" id="Producto_6">
                 <h1 class="Titulo" id="Titulo_3">SKY DE GIOIA DE GIORGIO ARMANI</h1>
                 <img class="Img-Producto" id="Img-Producto_3" src="img/Catalogo-6.png">
-                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <h1 class="Precio">$ 200 USD</h1>>
                 <p class="Descripcion" id="Descripcion_3">
                   Un comienzo fresco ligeramente verde y especiado. Un corazón aromático dominado por la esencia de
                   lavanda de Provenza,
@@ -210,8 +196,7 @@
                   pachuli de Indonesia. Perfumistas: Maurice Roucel, Symrise.
                 </p>
                 <button class="Compra" id="Compra_1">
-                  <h3 class="Content-Compra" id="Conten-Compra_1"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $250
-                      USD</i></h3>
+                  <h3 class="Content-Compra" id="Conten-Compra_1">AÑADIR AL CARRITO</h3>
                 </button>
               </td>
             </tr>
@@ -224,7 +209,7 @@
               <td class="Producto" id="Producto_7" width="100%">
                 <h1 class="Titulo" id="Titulo_7">PERFUME MUJER DOLCE EDP 75 ML DOLCE & GABBANA 75 ML</h1>
                 <img class="Img-Producto" id="Img-Producto_7" src="img/Catalogo-7.png">
-                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <h1 class="Precio">$ 290 USD</h1>
                 <p class="Descripcion" id="Descripcion_7">
                   Esta fragancia femenina está inspirada en la belleza legendariamente noble de Sicilia, con sus
                   jardines colmados de frescas flores blancas.
@@ -232,28 +217,26 @@
                   contemporánea.
                 </p>
                 <button class="Compra" id="Compra_7">
-                  <h3 class="Content-Compra" id="Conten-Compra_7"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $310
-                      USD</i></h3>
+                  <h3 class="Content-Compra" id="Conten-Compra_1">AÑADIR AL CARRITO</h3>
                 </button>
               </td>
               <td class="Producto" id="Producto_8">
                 <h1 class="Titulo" id="Titulo_8">PERFUME PARA MUJER THE ONE 75ML DE DOLCE & GABBANA</h1>
                 <img class="Img-Producto" id="Img-Producto_8" src="img/Catalogo-8.png">
-                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <h1 class="Precio">$ 250 USD</h1>
                 <p class="Descripcion" id="Descripcion_8">
                   75 M/L.(ONZ).THE ONE fue creado en el 2006. Como fue previsto por los diseñadores, es una fragancia
                   para una mujer excepcional que inmediatamente llama la atención,
                   no sólo con su aspecto, sino también con sus modales, postura y el mundo interior.
                 </p>
                 <button class="Compra" id="Compra_8">
-                  <h3 class="Content-Compra" id="Conten-Compra_8"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO $450
-                      USD</i></h3>
+                  <h3 class="Content-Compra" id="Conten-Compra_1">AÑADIR AL CARRITO</h3>
                 </button>
               </td>
               <td class="Producto" id="Producto_9">
                 <h1 class="Titulo" id="Titulo_9">PERFUME LANCOME TRESOR PARA MUJER SIZE 100 ML</h1>
                 <img class="Img-Producto" id="Img-Producto_9" src="img/Catalogo-9.png">
-                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <h1 class="Precio">$ 240 USD</h1>
                 <p class="Descripcion" id="Descripcion_9">
                   Perfumes para mujeres Tresor Eau De Parfum Lumineuse De Lancome, su aroma es jovial, dulce
                   sofisticado,
@@ -261,8 +244,7 @@
                   alegres
                 </p>
                 <button class="Compra" id="Compra_10">
-                  <h3 class="Content-Compra" id="Conten-Compra_10"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO
-                      $180 USD</i></h3>
+                  <h3 class="Content-Compra" id="Conten-Compra_1">AÑADIR AL CARRITO</h3>
                 </button>
               </td>
             </tr>
@@ -270,21 +252,20 @@
               <td class="Producto" id="Producto_10">
                 <h1 class="Titulo" id="Titulo_10">TRÉSOR MIDNIGHT ROSE DE LANCÔMEN</h1>
                 <img class="Img-Producto" id="Img-Producto_10" src="img/Catalogo-10.png">
-                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ </h1>
+                <h1 class="Precio">$ 100 USD</h1>
                 <p class="Descripcion" id="Descripcion_10">
                   Este maravilloso perfume que pertenece a la familia olfativa Almizcle-Floral-Amaderado.
                   Su bella botella rosada, alargada y con un moño de rosa en el cuello, se destaca de sus predecesores
                   de la línea trésor que suelen venir en un envase con forma de pirámide invertida.
                 </p>
                 <button class="Compra" id="Compra_10">
-                  <h3 class="Content-Compra" id="Conten-Compra_10"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO
-                      $150 USD</i></h3>
+                  <h3 class="Content-Compra" id="Conten-Compra_1">AÑADIR AL CARRITO</h3>
                 </button>
               </td>
               <td class="Producto" id="Producto_11">
                 <h1 class="Titulo" id="Titulo_11">PERFUME LA VIE EST BELLE</h1>
                 <img class="Img-Producto" id="Img-Producto_11" src="img/Catalogo-11.png">
-                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <h1 class="Precio">$ 150 USD</h1>
                 <p class="Descripcion" id="Descripcion_11">
                   La Vie Est Belle de Lancome es una fragancia de la familia olfativa Floral Frutal Gourmand para
                   Mujeres. La Vie Est Belle se lanzó en 2012.
@@ -292,14 +273,13 @@
                   grosellas negras y pera; las Notas de Corazón son iris, jazmín y flor de azahar del naranjo.
                 </p>
                 <button class="Compra" id="Compra_11">
-                  <h3 class="Content-Compra" id="Conten-Compra_11"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO
-                      $350 USD</i></h3>
+                  <h3 class="Content-Compra" id="Conten-Compra_1">AÑADIR AL CARRITO</h3>
                 </button>
               </td>
               <td class="Producto" id="Producto_12">
                 <h1 class="Titulo" id="Titulo_12">SKY DE GIOIA DE GIORGIO ARMANI</h1>
                 <img class="Img-Producto" id="Img-Producto_12" src="img/Catalogo-12.png">
-                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <h1 class="Precio">$ 240 USD</h1>
                 <p class="Descripcion" id="Descripcion_12">
                   Perfume The One Dolce Gabbana Hombre Eau De Parfum es una fragancia de la familia olfativa Amaderada
                   Especiada para Hombres.
@@ -308,8 +288,7 @@
                   cardamomo.
                 </p>
                 <button class="Compra" id="Compra_12">
-                  <h3 class="Content-Compra" id="Conten-Compra_12"><i class="fas fa-shopping-cart">&nbsp;&nbsp;COSTO
-                      $250 USD</i></h3>
+                  <h3 class="Content-Compra" id="Conten-Compra_1">AÑADIR AL CARRITO</h3>
                 </button>
               </td>
             </tr>
