--- a/Index.html
+++ b/Index.html
@@ -104,10 +104,10 @@
     <div class="Formulario-P" id="Opciones-Productos">
       <div class="Tabs-Usuario" id="Secciones-Productos">
         <label for="Registrate" id="label-Productos">
-          <h3>PARA ÉL</h3>
+          <h3>PARA &nbsp; ÉL</h3>
         </label>
         <label for="Login" id="label-Productos">
-          <h3>PARA ELLA</h3>
+          <h3>PARA &nbsp; ELLA</h3>
         </label>
       </div>
       <div class="content">
