--- a/Registrate.html
+++ b/Registrate.html
@@ -15,8 +15,12 @@
 </head>
 
 <body background="img/Fondo_Usuario.jpg">
+  <br> <br> <br> <br>
   <header class="Cabecera">
     <nav class="Nav-Opciones">
+      <a href="Index.html">
+        <h1 class="Logo-Perfumes">PERFUMERÍA</h1>
+      </a>
       <ul>
         <li><a href=""><i class="fas fa-user-cog"></i></a></li>
         <li><a href=""><i class="fas fa-cart-plus"></i></a></li>
@@ -24,10 +28,9 @@
       </ul>
     </nav>
   </header>
-  <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
   <div class="Formulario-P">
     <div class="Tabs-Usuario">
-      <label for="Registrate">Regístrate</label>
+      <label for="Registrate">Registrarme</label>
       <label for="Login">Iniciar Sesión</label>
     </div>
     <div class="content">
@@ -37,12 +40,14 @@
           <legend>
             <h1>REGÍSTRATE <br> <i class="fas fa-user-plus"></i></h1>
           </legend>
-          <input class="Input-Registrate" type="text" placeholder="Nombre">&nbsp <br> <br> <br>
-          <input class="Input-Registrate" type="text" placeholder="Apellido"> &nbsp <br> <br> <br>
-          <input class="Input-Registrate" type="tel" placeholder="Telefono"> &nbsp <br> <br> <br>
-          <input class="Input-Registrate" type="tel" placeholder="Contraseña"> &nbsp
+          <input class="Input-Registrate" type="text" placeholder="Nombre">&nbsp  &nbsp 
+          <input class="Input-Registrate" type="text" placeholder="Apellido">&nbsp  &nbsp  <br> <br> <br>
+          <input class="Input-Registrate" type="tel" placeholder="Telefono"> &nbsp  &nbsp  
+          <input class="Input-Registrate" type="tel" placeholder="Email">&nbsp  &nbsp   <br> <br> <br>
+          <input class="Input-Registrate" type="tel" placeholder="Contraseña">&nbsp &nbsp  
+          <input class="Input-Registrate" type="tel" placeholder="Confirmar Contraseña"> &nbsp  &nbsp 
           <br><br>
-          <input type="submit" value="Registrarme" class="Botton-Enviar"/>
+          <input type="submit" value="Registrarme" id="btn-registrar" class="Botton-Enviar"/>
           <br>
         </form>
       </div>
@@ -51,10 +56,9 @@
         <form action="" class="Formulario" id="Iniciar">
           <h1>Bienvenido a Perfumes <br> <i class="fas fa-users"><br></i></h1>
           <br> <br>
-          <input id="Telefono" class="Input" type="text" placeholder="Numero de telefono"> <br> <br>
+          <input id="Telefono" class="Input" type="text" placeholder="Numero de telefono o Email"> <br> <br>
           <input id="Contraseña"" class="Input" type="text" placeholder="Contraseña">
           <h1 class="Usuario" id="Contraseña"><a href="">¿PERDISTE TU CONTRASEÑA?</a></h1> <br>
-          <h1 class="Usuario" id="Registro"><a href="Registrate.html">¿NO TIENES CUENTA? REGISTRASTE</a></h1>
           <input type="submit" value="Ingresar" class="Botton-Enviar"/>
         </form>
       </div>
